--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ p{
     margin: 0;
     padding: 10px;
     color: white;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
+    padding-top: 20px;
     text-align: center;
 }
 
